--- a/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/Views/UtakmicePage.xaml
+++ b/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/Views/UtakmicePage.xaml
@@ -10,6 +10,7 @@
             <Label Text="Utakmice"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Label Text="Odaberite ligu"/>
             <Picker ItemsSource="{Binding LigeList}" ItemDisplayBinding="{Binding Naziv}" SelectedItem="{Binding SelectedLiga}"></Picker>
             <ListView ItemsSource="{Binding UtakmiceList}" ItemSelected="ListView_ItemSelected">
                 <ListView.ItemTemplate>
