--- a/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/Views/PlacanjeInfoPage.xaml
+++ b/SeminarskiRS2.MobileApp/SeminarskiRS2.MobileApp/Views/PlacanjeInfoPage.xaml
@@ -16,7 +16,7 @@
             </Grid>
             <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" x:Name="success" IsVisible="False">
                 <StackLayout>
-                    <Image Source="success.png"></Image>
+                    <Image Source="Assets/success.png"></Image>
                 </StackLayout>
                 <Label HorizontalOptions="CenterAndExpand" x:Name="successmsg"></Label>
                 <Button Text="Provjerite informacije ulaznice" Clicked="Button_Clicked" BackgroundColor="LightGreen"></Button>
